# NDI-Refining

./: .gitignore  .gitmodules  README.md  client_example.py  model_predictions.ipynb  ndi.m  ndi_comp_mag_nomag.asv  ndi_comp_mag_nomag.m  ndi_refining.m  ndi_refining_mag.asv  ndi_refining_mag.m  pyproject.toml
QSMnetp/: Dockerfile  README.md  api.py  custom_inference.py  requirements.txt
matlab_files/: compute_rmse.m  dipole_kernel.m  imagen_papers2.m  imagesc3d22.m  ndi.m  nlTV.m
matlab_files/nii/: load_nii_img.m  load_untouch_nii_img.m
xQSM/: Dockerfile  api.py  custom_inference.py
