[project]
name = "ndi-refining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
]
